# weld_seam_ros2

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
assets/: lap_joint_base_frame.pcd  lap_joint_test.pcd  lap_joint_test.stl  lap_joint_with_table.pcd
launch/: detector.launch.py  view_scene.launch.py
rviz/: scene.rviz
weld_seam_ros2/: lap_joint_seam_detector_node.py  scene_publisher_node.py  seam_detector_node.py
